# rag_document

./: .dot-env  .gitignore  README.md  main.py  pyproject.toml  rag_ia.py  rag_pdf.py
