[project]
name = "rag-document"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dateutil==2.9.0.post0",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "pypdf>=5.7.0",
    "langchain-chroma>=0.2.4",
]
